# assistiverobot-ros

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  installation.md
World/: 18_floor.world  18_floor_new.world
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsResponse.h  Num.h
devel/lib/pkgconfig/: beginner_tutorials.pc  my_urdf.pc  urdf_tutorial.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/my_urdf/cmake/: my_urdfConfig.cmake
devel/share/urdf_tutorial/cmake/: urdf_tutorialConfig.cmake
install/: _setup_util.py  local_setup.sh  setup.sh
install/include/beginner_tutorials/: AddTwoIntsRequest.h
install/lib/pkgconfig/: beginner_tutorials.pc
install/share/beginner_tutorials/: package.xml
install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
install/share/roseus/ros/beginner_tutorials/: manifest.l
m2wr_description/launch/: rviz.launch  spawn.launch
m2wr_description/rviz/: m2wr.rviz
motion_plan/launch/: gmapping.launch
motion_plan/scripts/: obstacle_avoidance.py
my_worlds/: package.xml
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py
src/m2wr_description/: package.xml
src/m2wr_description/launch/: 18_floor.launch  gazebo.launch  rviz.launch  spawn.launch
src/m2wr_description/urdf/: gazebo.xacro  m2wr.xacro  macro.xacro
src/motion_plan/: package.xml
src/motion_plan/scripts/: go_to_point.py  obstacle_avoidance.py  reading_laser.py
src/my_urdf/: CMakeLists.txt  package.xml
src/my_urdf/launch/: display.launch
src/my_urdf/meshes/: l_finger.dae  l_finger_tip.dae
src/my_urdf/urdf/: 05-visual.urdf
src/my_urdf_sim/: CMakeLists.txt  package.xml
src/my_urdf_sim/launch/: diffdrive.launch  gazebo.launch  gazebo_18_floor.launch
src/my_urdf_sim/urdf/: 13-diffdrive.urdf.xacro
src/my_worlds/launch/: world.launch
toktak_apps/: CMakeLists.txt  package.xml
toktak_apps/launch/: toktak_api.launch  toktak_demo1.launch
toktak_apps/scripts/: toktakAPI.py  toktakbot.py
toktak_description/: CMakeLists.txt  package.xml
toktak_description/launch/: spawn.launch  view_model.launch
toktak_description/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro
toktak_diagnostic/: CMakeLists.txt  package.xml
toktak_diagnostic/scripts/: battery.py  logger.py  reading_bumper.py  reading_laser.py
toktak_gazebo/: CMakeLists.txt  package.xml
toktak_gazebo/launch/: spawn.launch  toktak_18_floor.launch  world.launch
toktak_gazebo/world/: 18_floor.world
toktak_keyop/: CMakeLists.txt  package.xml
toktak_keyop/include/keyop_core/: keyop_core.hpp
toktak_keyop/launch/: keyop.launch  safe_keyop.launch
toktak_keyop/param/: keyop_mux.yaml
toktak_keyop/src/: keyop_core.cpp  main.cpp
toktak_motion_plan/: CMakeLists.txt  package.xml
toktak_motion_plan/launch/: gmapping.launch  test.launch
toktak_motion_plan/scripts/: ControlKobuki.py  ControlTurtleBot.py  draw_a_square.py  reading_bumper.py  reading_laser.py  toktak_test.py  toktakbot.py
toktak_navigation/: CMakeLists.txt  package.xml
toktak_navigation/launch/: amcl.launch  move_base.launch  toktak_navigation.launch
toktak_navigation/maps/: 18_floor.pgm  18_floor.yaml  406_room.pgm  406_room.yaml  4th_floor.pgm  4th_floor.yaml  cu_hos_18a.pgm  cu_hos_18a.yaml  map.pgm  map.yaml
toktak_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
toktak_navigation/rviz/: toktak_navigation.rviz
toktak_node/: CMakeLists.txt  package.xml
toktak_node/launch/: minimal.launch
toktak_slam/: CMakeLists.txt  package.xml
toktak_slam/launch/: toktak_gazebo_gmapping.launch  toktak_gmapping.launch
toktak_slam/rviz/: toktak_slam.rviz
toktak_slam/scripts/: ObstacleAvoidance.py
toktak_worlds/: CMakeLists.txt  package.xml
