<?xml version="1.0"?>
<package format="2">
  <name>toktak_apps</name>
  <version>0.0.0</version>
  <description>The toktak_apps package</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>
  <author email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>
  <maintainer email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
