<?xml version="1.0"?>
<package format="2">
  <name>toktak_description</name>
  <version>0.7.6</version>
  <description>
    Description of the Kobuki model.
    Provides the model description of Kobuki for simulation and visualisation. The files in this 
    package are parsed and used by a variety of other components. Most users will not interact directly
    with this package.
      
    WARNING: This package is disabled because it cannot be catkinized by now, as xacro dependency is not
    catkin still. In the interim we use a unary pre-catkin stack named kobuki_description.
  </description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>
  <author email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>
  <maintainer email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
