<?xml version="1.0"?>
<package format="2">
  <name>toktak_gazebo</name>
  <version>0.5.7</version>
  <description>Toktak simulation for Gazebo</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>
  <author email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>
  <maintainer email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- launch file dependencies -->
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>kobuki_gazebo_plugins</exec_depend>
  <exec_depend>kobuki_random_walker</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
