<?xml version="1.0"?>
<package format="2">
  <name>toktak_keyop</name>
  <version>0.0.0</version>
  <description>Keyboard teleoperation for Toktak: relays commands from a keyboard to Toktak.</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Ecl -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>

  <!-- Kobuki -->
  <build_depend>kobuki_msgs</build_depend>

  <!-- ROS -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- Ecl -->
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>ecl_time</exec_depend>

  <!-- Kobuki -->
  <exec_depend>kobuki_msgs</exec_depend>
  
  <!-- Yujin ocs -->
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>
</package>
