<?xml version="1.0"?>
<package format="2">
  <name>toktak_node</name>
  <version>0.0.0</version>
  <description>ROS nodelet for Toktak: ROS wrapper for the Kobuki driver.</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>
  <author email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>
  <maintainer email="jirawat.tar@g.swu.ac.th">Jirawat Promsee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>

  <!-- Kobuki -->
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>kobuki_driver</build_depend>
  <build_depend>kobuki_ftdi</build_depend>
  <build_depend>kobuki_keyop</build_depend>
  <build_depend>kobuki_safety_controller</build_depend>

  <!-- ECL -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_streams</build_depend>
  <build_depend>ecl_threads</build_depend>

  <!-- RPLiDAR -->
  <build_depend>rplidar_ros</build_depend>

  <!-- For Tests -->
  <build_depend>rospy</build_depend>

  <!-- ROS -->
  <exec_depend>capabilities</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- Kobuki -->
  <exec_depend>kobuki_rapps</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>kobuki_driver</exec_depend>
  <exec_depend>kobuki_ftdi</exec_depend>
  <exec_depend>kobuki_keyop</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>

  <!-- ECL -->
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_sigslots</exec_depend>
  <exec_depend>ecl_streams</exec_depend>
  <exec_depend>ecl_threads</exec_depend>

  <!-- RPLiDAR -->
  <exec_depend>rplidar_ros</exec_depend>

  <!-- For Tests -->
  <exec_depend>rospy</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
</package>
