<?xml version="1.0"?>
<package format="2">
  <name>m2wr_description</name>
  <version>0.0.0</version>
  <description>The m2wr_description package</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
</package>
