<?xml version="1.0"?>
<package format="2">
    <name>motion_plan</name>
    <version>0.0.0</version>
    <description>The motion_plan package</description>

    <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>

    <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>gazebo_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>