<?xml version="1.0"?>
<package format="2">
  <name>my_urdf</name>
  <version>0.0.0</version>
  <description>The package contains a number of URDF model.</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
