<?xml version="1.0"?>
<package format="2">
  <name>my_urdf_sim</name>
  <version>0.0.0</version>
  <description>The my_urdf_sim package</description>

  <author email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</author>

  <maintainer email="chanon.sloth@g.swu.ac.th">Chanon Treemeth</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf_tutorial</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
